add patient name, implement css in donation.css and style.css file

--- a/pages/donate.html
+++ b/pages/donate.html
@@ -94,7 +94,7 @@
 
   <script>
     const hospitals = {
-      "Hope Medical Center": ["Rina Sharma", "Kamal Das", "Amit Rai"],
+      "Hope Medical Center": ["Rina Sharma", "Kamal Das", "Amit Rai","hari bahadur"],
       "Sunrise Children's Hospital": ["Baby Aarav", "Maya Thapa", "Sushil Karki", "Anita Shrestha"],
       "Saint Mercy Hospital": ["Ramesh Adhikari", "Lalita Gurung", "Binod KC"]
     };
