change in paragraph ,adding of file ,refactor of code,change in location of filr ,

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 
   <section id="about">
     <h2>About Us</h2>
-    <p>We empower communities through collective generosity, transparency, and action. Our vision is a world where kindness is currency and every soul has a spark of hope.</p>
-    
+    <p>We uplift communities through generosity and action, where kindness sparks hope in every soul..</p> 
+    <a href="/pages/about.html" class="btn">Learn More</a>
+
   </section>
 
   <section id="causes">
