add the correct name of file, addcorrect name of file, refactor of code,addof link of a file, refactor of code,refactor of code

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <section id="about">
     <h2>About Us</h2>
     <p>We uplift communities through generosity and action, where kindness sparks hope in every soul..</p> 
-    <a href="/pages/about.html" class="btn">Learn More</a>
+    <a href="/pages/about -us .html" class="btn">Learn More</a>
 
   </section>
 
