--- a/pages/donate.html
+++ b/pages/donate.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Donate Now | Kindred Flame</title>
   <link rel="stylesheet" href="/pages/donation.css" />
+  <link rel="stylesheet" href="/pages/patient-details.html">
 </head>
 <body>
   <header>
@@ -94,7 +95,7 @@
 
   <script>
     const hospitals = {
-      "Hope Medical Center": ["Rina Sharma", "Kamal Das", "Amit Rai","hari bahadur"],
+      "Hope Medical Center": ["Rina Sharma", "Kamal Das", "Amit Rai","Hari Bahadur"],
       "Sunrise Children's Hospital": ["Baby Aarav", "Maya Thapa", "Sushil Karki", "Anita Shrestha"],
       "Saint Mercy Hospital": ["Ramesh Adhikari", "Lalita Gurung", "Binod KC"]
     };
