change of file name,change in color

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Kindred Flame – Ignite Hope</title>
   <link rel="stylesheet" href="/style/style.css" />
-  <link rel="stylesheet" href="/pages/donate.html"> 
-  <link rel="stylesheet" href="/pages/donation.css">
+  <link rel="stylesheet" href="/pages/patient-details.html"> 
+  <link rel="stylesheet" href="/pages/patient-details.css">
 </head>
 <body>
   <header>
@@ -27,7 +27,7 @@
   <section id="home" class="hero">
     <h2>One spark can light a thousand hearts.</h2>
     <p>Be the flame.</p>
-    <a href="/pages/donate.html" class="btn">Donate Now</a>
+    <a href="/pages/patient-details.html" class="btn">Donate Now</a>
     <a href="#join" class="btn secondary">Join the Crew</a>
   </section>
 
