refactor of code ,refactor of code ,aaadding of file

--- a/pages/join-us.html
+++ b/pages/join-us.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Join Us - Kindred Flame</title>
-  <link rel="stylesheet" href="join-us.css" />
+  <link rel="stylesheet" href="/pages/join-us.css" />
 </head>
 <body>
   <header>
     <div class="container">
-      <h1 class="logo"><a href="index.html">🔥 Kindred Flame</a></h1>
+      <h1 class="logo"><a href="/index.html">🔥 Kindred Flame</a></h1>
       <nav>
         <ul>
           <li><a href="index.html#home">Home</a></li>
