re factor of code ,refactor of code

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Kindred Flame – Ignite Hope</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/style/style.css" />
 </head>
 <body>
   <header>
@@ -30,7 +30,7 @@
       <h2 class="hero-title">One spark can light a thousand hearts.</h2>
       <p class="hero-subtitle">Be the flame.</p>
       <div class="hero-buttons">
-        <a href="#donate" class="btn btn-primary">Donate Now</a>
+        <a href="/pages/patient-details.html" class="btn btn-primary">Donate Now</a>
         <a href="#join" class="btn btn-secondary">Join the Crew</a>
       </div>
     </div>
