--- a/index.html
+++ b/index.html
@@ -166,7 +166,16 @@
           <h4>Campus Ambassador Program</h4>
         </div>
       </div>
-      <button class="btn btn-primary" onclick="showJoinForm()">Join Us Now</button>
+      <div class="buttons">
+        <button class="btn btn-primary" onclick="showJoinForm()">Join Us Now</button>
+        <div class="member" style="display: flex; align-items: center; ">
+          <p style="color: white;">Or if you are already  member </p> &nbsp&nbsp&nbsp
+          
+          <a href="/pages/join-us.html"><button class="btn btn-primary" onclick="joinAsMember()">Join Us As Member</button></a>
+          
+        </div>
+      </div>
+
     </div>
   </section>
 
