--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Kindred Flame – Ignite Hope</title>
   <link rel="stylesheet" href="/style/style.css" />
+  <link rel="stylesheet" href="/pages/script.js" />
   <style>
     /* Graph styling */
     .impact-graph {
