--- a/index.html
+++ b/index.html
@@ -179,10 +179,8 @@
           <h4>Campus Ambassador Program</h4>
         </div>
       </div>
-      <div class="buttons">
-        <button class="btn btn-primary" onclick="showJoinForm()">Join Us Now</button>
-        <div class="member" style="display: flex; align-items: center; ">
-          <p style="color: white;">Or if you are already member</p>&nbsp;&nbsp;&nbsp;
+      <div class="join-cta">
+        <div class="join-cta-text">
           <a href="/pages/join-us.html"><button class="btn btn-primary" onclick="joinAsMember()">Join Us As Member</button></a>
         </div>
       </div>
