refactor of code

--- a/index.html
+++ b/index.html
@@ -776,7 +776,9 @@
         </div>
       </div>
       <center style="margin-top: 2rem;">
+        <a href="./pages/join-us.html">
         <button class="btn btn-primary" onclick="joinAsMember()">Join Us As Member</button>
+      </a>
       </center>
     </div>
   </section>
